code and readme formatting